<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title_hint">Enter a crime title here.</string>
    <string name="crime_title">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="list_item_crime_title">Crime title</string>
    <string name="list_item_crime_date">Crime date</string>
    <string name="list_item_crime_police_button">Call 911</string>
    <string name="first_page_button">First page</string>
    <string name="last_page_button">Last page</string>
    <string name="date_picker_title">Date of crime:</string>
    <string name="time_picker_title">Time of crime:</string>
    <string name="new_crime">New crime</string>
    <string name="remove_crime">Remove crime</string>
    <string name="show_subtitle">Show subtitle</string>
    <string name="hide_subtitle">Hide subtitle</string>
    <string name="crime_suspect_text">Choose suspect</string>
    <string name="crime_report_text">Send crime report</string>
    <string name="crime_report">%1$s! The crime was discovered by %2$s. %3$s, and %4$s
    </string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject" translatable="false">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <plurals name="subtitle_plurals">
        <item quantity="one">%1$d crime</item>
        <item quantity="other">%1$d crimes</item>
    </plurals>
    <string name="call_suspect">Call suspect</string>
    <string name="crime_photo_button_description">Take photo of crime scene</string>
    <string name="crime_photo_no_image_dscription">Crime scene photo (not set)</string>
    <string name="crime_photo_image_descriprion">Crime scene photo (set)</string>
    <string name="crime_description">Case %1$s happened %2$s. %3$s.</string>
    <string name="crime_date">Date</string>
    <string name="crime_time">Time</string>
</resources>
